<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/date_picker_pop_up_image_view_not_use"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@color/cardview_dark_background"
        android:contentDescription="fundo cinza do pop up" />

    <ImageView
        android:id="@+id/date_picker_pop_up_image_view_background_white"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/date_picker_pop_up_button_confirm"
        app:layout_constraintEnd_toEndOf="@+id/date_picker_pop_up_number_picker_year"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/date_picker_pop_up_number_picker_month"
        app:layout_constraintTop_toTopOf="@+id/date_picker_pop_up_text_view_month"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@color/white"
        tools:srcCompat="@android:color/white"
        android:contentDescription="Fundo branco do pop up" />

    <NumberPicker
        android:id="@+id/date_picker_pop_up_number_picker_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.386"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.455">

    </NumberPicker>

    <NumberPicker
        android:id="@+id/date_picker_pop_up_number_picker_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/date_picker_pop_up_number_picker_month"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/date_picker_pop_up_number_picker_month"
        app:layout_constraintTop_toTopOf="@+id/date_picker_pop_up_number_picker_month"
        app:layout_constraintVertical_bias="1.0">

    </NumberPicker>

    <TextView
        android:id="@+id/date_picker_pop_up_text_view_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ano"
        app:layout_constraintBottom_toTopOf="@+id/date_picker_pop_up_number_picker_year"
        app:layout_constraintEnd_toEndOf="@+id/date_picker_pop_up_number_picker_year"
        app:layout_constraintStart_toStartOf="@+id/date_picker_pop_up_number_picker_year"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/date_picker_pop_up_text_view_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mes"
        app:layout_constraintBottom_toTopOf="@+id/date_picker_pop_up_number_picker_month"
        app:layout_constraintEnd_toEndOf="@+id/date_picker_pop_up_number_picker_month"
        app:layout_constraintStart_toStartOf="@+id/date_picker_pop_up_number_picker_month"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/date_picker_pop_up_button_confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#D38AE88E"
        android:text="@string/confirmar"
        app:layout_constraintEnd_toEndOf="@+id/date_picker_pop_up_image_view_background_white"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/date_picker_pop_up_number_picker_month"
        app:layout_constraintTop_toBottomOf="@+id/date_picker_pop_up_number_picker_month" />

</androidx.constraintlayout.widget.ConstraintLayout>